// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner Snapshots inline spinner Inline Spinner default snapshot 1`] = `
<DocumentFragment>
  .c1 {
  width: var(--style-icon-width);
  height: var(--style-icon-height);
}

.c1:not(.color-override) g,
.c1:not(.color-override) path {
  fill: var(--style-icon-color);
}

.c1:not(.color-override) g[stroke-width],
.c1:not(.color-override) path[stroke-width] {
  stroke: var(--style-icon-color);
  fill: none;
}

.c1:not(.color-override) g[stroke-width] *,
.c1:not(.color-override) path[stroke-width] * {
  fill: none;
}

.c1.start {
  margin-right: var(--bds-sizes-size-8);
}

.c1.end {
  margin-left: var(--bds-sizes-size-8);
}

.c0 {
  position: relative;
  z-index: 1150;
}

.c0.inline-spinner {
  margin-left: var(--bds-sizes-size-8);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
}

.c0 .spinner-overlay {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .spinner-overlay .icon-wrapper {
  background-color: var(--bds-color-text-tertiary);
  border-radius: 100%;
  padding: var(--bds-sizes-size-32);
}

.c0 .spinner-overlay .icon-wrapper.size--small {
  padding: var(--bds-sizes-size-16);
}

.c0 .spinner-overlay svg {
  display: block;
}

.c0.inline-spinner svg,
.c0 .icon-wrapper svg {
  height: var(--bds-sizes-size-64);
  width: var(--bds-sizes-size-64);
  -webkit-animation: kKPVgJ 1s linear infinite;
  -moz-animation: kKPVgJ 1s linear infinite;
  -webkit-animation: kKPVgJ 1s linear infinite;
  animation: kKPVgJ 1s linear infinite;
}

.c0.inline-spinner.size--small svg,
.c0 .icon-wrapper.size--small svg {
  height: var(--bds-sizes-size-16);
  width: var(--bds-sizes-size-16);
}

<span
    class="c0 inline-spinner size--small"
  >
    <svg
      aria-hidden="true"
      class="c1 icon icon-loading"
      role="presentation"
      style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: interactive;"
      viewBox="0 0 16 16"
    >
      <path
        clip-rule="evenodd"
        d="M8 2c3.3137 0 6 2.6863 6 6s-2.6863 6-6 6a5.9877 5.9877 0 0 1-2.113-.3826l.849-1.2974c.401.1172.8251.18 1.264.18 2.4853 0 4.5-2.0147 4.5-4.5S10.4853 3.5 8 3.5 3.5 5.5147 3.5 8c0 .777.197 1.5082.5437 2.146l-1.1202 1.0538C2.3385 10.2737 2 9.1764 2 8c0-3.3137 2.6863-6 6-6Z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`Spinner Snapshots inline spinner colors Inline Spinner commerce theme snapshot 1`] = `
<DocumentFragment>
  .c1 {
  width: var(--style-icon-width);
  height: var(--style-icon-height);
}

.c1:not(.color-override) g,
.c1:not(.color-override) path {
  fill: var(--style-icon-color);
}

.c1:not(.color-override) g[stroke-width],
.c1:not(.color-override) path[stroke-width] {
  stroke: var(--style-icon-color);
  fill: none;
}

.c1:not(.color-override) g[stroke-width] *,
.c1:not(.color-override) path[stroke-width] * {
  fill: none;
}

.c1.start {
  margin-right: var(--bds-sizes-size-8);
}

.c1.end {
  margin-left: var(--bds-sizes-size-8);
}

.c0 {
  position: relative;
  z-index: 1150;
}

.c0.inline-spinner {
  margin-left: var(--bds-sizes-size-8);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
}

.c0 .spinner-overlay {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .spinner-overlay .icon-wrapper {
  background-color: var(--bds-color-text-tertiary);
  border-radius: 100%;
  padding: var(--bds-sizes-size-32);
}

.c0 .spinner-overlay .icon-wrapper.size--small {
  padding: var(--bds-sizes-size-16);
}

.c0 .spinner-overlay svg {
  display: block;
}

.c0.inline-spinner svg,
.c0 .icon-wrapper svg {
  height: var(--bds-sizes-size-64);
  width: var(--bds-sizes-size-64);
  -webkit-animation: kKPVgJ 1s linear infinite;
  -moz-animation: kKPVgJ 1s linear infinite;
  -webkit-animation: kKPVgJ 1s linear infinite;
  animation: kKPVgJ 1s linear infinite;
}

.c0.inline-spinner.size--small svg,
.c0 .icon-wrapper.size--small svg {
  height: var(--bds-sizes-size-16);
  width: var(--bds-sizes-size-16);
}

<span
    class="c0 inline-spinner size--small"
  >
    <svg
      aria-hidden="true"
      class="c1 icon icon-loading"
      role="presentation"
      style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: commerce;"
      viewBox="0 0 16 16"
    >
      <path
        clip-rule="evenodd"
        d="M8 2c3.3137 0 6 2.6863 6 6s-2.6863 6-6 6a5.9877 5.9877 0 0 1-2.113-.3826l.849-1.2974c.401.1172.8251.18 1.264.18 2.4853 0 4.5-2.0147 4.5-4.5S10.4853 3.5 8 3.5 3.5 5.5147 3.5 8c0 .777.197 1.5082.5437 2.146l-1.1202 1.0538C2.3385 10.2737 2 9.1764 2 8c0-3.3137 2.6863-6 6-6Z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`Spinner Snapshots inline spinner colors Inline Spinner error theme snapshot 1`] = `
<DocumentFragment>
  .c1 {
  width: var(--style-icon-width);
  height: var(--style-icon-height);
}

.c1:not(.color-override) g,
.c1:not(.color-override) path {
  fill: var(--style-icon-color);
}

.c1:not(.color-override) g[stroke-width],
.c1:not(.color-override) path[stroke-width] {
  stroke: var(--style-icon-color);
  fill: none;
}

.c1:not(.color-override) g[stroke-width] *,
.c1:not(.color-override) path[stroke-width] * {
  fill: none;
}

.c1.start {
  margin-right: var(--bds-sizes-size-8);
}

.c1.end {
  margin-left: var(--bds-sizes-size-8);
}

.c0 {
  position: relative;
  z-index: 1150;
}

.c0.inline-spinner {
  margin-left: var(--bds-sizes-size-8);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
}

.c0 .spinner-overlay {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .spinner-overlay .icon-wrapper {
  background-color: var(--bds-color-text-tertiary);
  border-radius: 100%;
  padding: var(--bds-sizes-size-32);
}

.c0 .spinner-overlay .icon-wrapper.size--small {
  padding: var(--bds-sizes-size-16);
}

.c0 .spinner-overlay svg {
  display: block;
}

.c0.inline-spinner svg,
.c0 .icon-wrapper svg {
  height: var(--bds-sizes-size-64);
  width: var(--bds-sizes-size-64);
  -webkit-animation: kKPVgJ 1s linear infinite;
  -moz-animation: kKPVgJ 1s linear infinite;
  -webkit-animation: kKPVgJ 1s linear infinite;
  animation: kKPVgJ 1s linear infinite;
}

.c0.inline-spinner.size--small svg,
.c0 .icon-wrapper.size--small svg {
  height: var(--bds-sizes-size-16);
  width: var(--bds-sizes-size-16);
}

<span
    class="c0 inline-spinner size--small"
  >
    <svg
      aria-hidden="true"
      class="c1 icon icon-loading"
      role="presentation"
      style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: error;"
      viewBox="0 0 16 16"
    >
      <path
        clip-rule="evenodd"
        d="M8 2c3.3137 0 6 2.6863 6 6s-2.6863 6-6 6a5.9877 5.9877 0 0 1-2.113-.3826l.849-1.2974c.401.1172.8251.18 1.264.18 2.4853 0 4.5-2.0147 4.5-4.5S10.4853 3.5 8 3.5 3.5 5.5147 3.5 8c0 .777.197 1.5082.5437 2.146l-1.1202 1.0538C2.3385 10.2737 2 9.1764 2 8c0-3.3137 2.6863-6 6-6Z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`Spinner Snapshots inline spinner prop: open Inline Spinner not shown snapshot 1`] = `
<DocumentFragment>
  .c1 {
  width: var(--style-icon-width);
  height: var(--style-icon-height);
}

.c1:not(.color-override) g,
.c1:not(.color-override) path {
  fill: var(--style-icon-color);
}

.c1:not(.color-override) g[stroke-width],
.c1:not(.color-override) path[stroke-width] {
  stroke: var(--style-icon-color);
  fill: none;
}

.c1:not(.color-override) g[stroke-width] *,
.c1:not(.color-override) path[stroke-width] * {
  fill: none;
}

.c1.start {
  margin-right: var(--bds-sizes-size-8);
}

.c1.end {
  margin-left: var(--bds-sizes-size-8);
}

.c0 {
  position: relative;
  z-index: 1150;
}

.c0.inline-spinner {
  margin-left: var(--bds-sizes-size-8);
  display: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
}

.c0 .spinner-overlay {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .spinner-overlay .icon-wrapper {
  background-color: var(--bds-color-text-tertiary);
  border-radius: 100%;
  padding: var(--bds-sizes-size-32);
}

.c0 .spinner-overlay .icon-wrapper.size--small {
  padding: var(--bds-sizes-size-16);
}

.c0 .spinner-overlay svg {
  display: block;
}

.c0.inline-spinner svg,
.c0 .icon-wrapper svg {
  height: var(--bds-sizes-size-64);
  width: var(--bds-sizes-size-64);
  -webkit-animation: kKPVgJ 1s linear infinite;
  -moz-animation: kKPVgJ 1s linear infinite;
  -webkit-animation: kKPVgJ 1s linear infinite;
  animation: kKPVgJ 1s linear infinite;
}

.c0.inline-spinner.size--small svg,
.c0 .icon-wrapper.size--small svg {
  height: var(--bds-sizes-size-16);
  width: var(--bds-sizes-size-16);
}

<span
    class="c0 inline-spinner size--small"
  >
    <svg
      aria-hidden="true"
      class="c1 icon icon-loading"
      role="presentation"
      style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: interactive;"
      viewBox="0 0 16 16"
    >
      <path
        clip-rule="evenodd"
        d="M8 2c3.3137 0 6 2.6863 6 6s-2.6863 6-6 6a5.9877 5.9877 0 0 1-2.113-.3826l.849-1.2974c.401.1172.8251.18 1.264.18 2.4853 0 4.5-2.0147 4.5-4.5S10.4853 3.5 8 3.5 3.5 5.5147 3.5 8c0 .777.197 1.5082.5437 2.146l-1.1202 1.0538C2.3385 10.2737 2 9.1764 2 8c0-3.3137 2.6863-6 6-6Z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`Spinner Snapshots inline spinner prop: open Inline Spinner shown snapshot 1`] = `
<DocumentFragment>
  .c1 {
  width: var(--style-icon-width);
  height: var(--style-icon-height);
}

.c1:not(.color-override) g,
.c1:not(.color-override) path {
  fill: var(--style-icon-color);
}

.c1:not(.color-override) g[stroke-width],
.c1:not(.color-override) path[stroke-width] {
  stroke: var(--style-icon-color);
  fill: none;
}

.c1:not(.color-override) g[stroke-width] *,
.c1:not(.color-override) path[stroke-width] * {
  fill: none;
}

.c1.start {
  margin-right: var(--bds-sizes-size-8);
}

.c1.end {
  margin-left: var(--bds-sizes-size-8);
}

.c0 {
  position: relative;
  z-index: 1150;
}

.c0.inline-spinner {
  margin-left: var(--bds-sizes-size-8);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
}

.c0 .spinner-overlay {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .spinner-overlay .icon-wrapper {
  background-color: var(--bds-color-text-tertiary);
  border-radius: 100%;
  padding: var(--bds-sizes-size-32);
}

.c0 .spinner-overlay .icon-wrapper.size--small {
  padding: var(--bds-sizes-size-16);
}

.c0 .spinner-overlay svg {
  display: block;
}

.c0.inline-spinner svg,
.c0 .icon-wrapper svg {
  height: var(--bds-sizes-size-64);
  width: var(--bds-sizes-size-64);
  -webkit-animation: kKPVgJ 1s linear infinite;
  -moz-animation: kKPVgJ 1s linear infinite;
  -webkit-animation: kKPVgJ 1s linear infinite;
  animation: kKPVgJ 1s linear infinite;
}

.c0.inline-spinner.size--small svg,
.c0 .icon-wrapper.size--small svg {
  height: var(--bds-sizes-size-16);
  width: var(--bds-sizes-size-16);
}

<span
    class="c0 inline-spinner size--small"
  >
    <svg
      aria-hidden="true"
      class="c1 icon icon-loading"
      role="presentation"
      style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: interactive;"
      viewBox="0 0 16 16"
    >
      <path
        clip-rule="evenodd"
        d="M8 2c3.3137 0 6 2.6863 6 6s-2.6863 6-6 6a5.9877 5.9877 0 0 1-2.113-.3826l.849-1.2974c.401.1172.8251.18 1.264.18 2.4853 0 4.5-2.0147 4.5-4.5S10.4853 3.5 8 3.5 3.5 5.5147 3.5 8c0 .777.197 1.5082.5437 2.146l-1.1202 1.0538C2.3385 10.2737 2 9.1764 2 8c0-3.3137 2.6863-6 6-6Z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`Spinner Snapshots inline spinner prop: small Inline Spinner with large spinner snapshot 1`] = `
<DocumentFragment>
  .c1 {
  width: var(--style-icon-width);
  height: var(--style-icon-height);
}

.c1:not(.color-override) g,
.c1:not(.color-override) path {
  fill: var(--style-icon-color);
}

.c1:not(.color-override) g[stroke-width],
.c1:not(.color-override) path[stroke-width] {
  stroke: var(--style-icon-color);
  fill: none;
}

.c1:not(.color-override) g[stroke-width] *,
.c1:not(.color-override) path[stroke-width] * {
  fill: none;
}

.c1.start {
  margin-right: var(--bds-sizes-size-8);
}

.c1.end {
  margin-left: var(--bds-sizes-size-8);
}

.c0 {
  position: relative;
  z-index: 1150;
}

.c0.inline-spinner {
  margin-left: var(--bds-sizes-size-8);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
}

.c0 .spinner-overlay {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .spinner-overlay .icon-wrapper {
  background-color: var(--bds-color-text-tertiary);
  border-radius: 100%;
  padding: var(--bds-sizes-size-32);
}

.c0 .spinner-overlay .icon-wrapper.size--small {
  padding: var(--bds-sizes-size-16);
}

.c0 .spinner-overlay svg {
  display: block;
}

.c0.inline-spinner svg,
.c0 .icon-wrapper svg {
  height: var(--bds-sizes-size-64);
  width: var(--bds-sizes-size-64);
  -webkit-animation: kKPVgJ 1s linear infinite;
  -moz-animation: kKPVgJ 1s linear infinite;
  -webkit-animation: kKPVgJ 1s linear infinite;
  animation: kKPVgJ 1s linear infinite;
}

.c0.inline-spinner.size--small svg,
.c0 .icon-wrapper.size--small svg {
  height: var(--bds-sizes-size-16);
  width: var(--bds-sizes-size-16);
}

<span
    class="c0 inline-spinner"
  >
    <svg
      aria-hidden="true"
      class="c1 icon icon-loading"
      role="presentation"
      style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: interactive;"
      viewBox="0 0 16 16"
    >
      <path
        clip-rule="evenodd"
        d="M8 2c3.3137 0 6 2.6863 6 6s-2.6863 6-6 6a5.9877 5.9877 0 0 1-2.113-.3826l.849-1.2974c.401.1172.8251.18 1.264.18 2.4853 0 4.5-2.0147 4.5-4.5S10.4853 3.5 8 3.5 3.5 5.5147 3.5 8c0 .777.197 1.5082.5437 2.146l-1.1202 1.0538C2.3385 10.2737 2 9.1764 2 8c0-3.3137 2.6863-6 6-6Z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`Spinner Snapshots inline spinner prop: small Inline Spinner with small spinner snapshot 1`] = `
<DocumentFragment>
  .c1 {
  width: var(--style-icon-width);
  height: var(--style-icon-height);
}

.c1:not(.color-override) g,
.c1:not(.color-override) path {
  fill: var(--style-icon-color);
}

.c1:not(.color-override) g[stroke-width],
.c1:not(.color-override) path[stroke-width] {
  stroke: var(--style-icon-color);
  fill: none;
}

.c1:not(.color-override) g[stroke-width] *,
.c1:not(.color-override) path[stroke-width] * {
  fill: none;
}

.c1.start {
  margin-right: var(--bds-sizes-size-8);
}

.c1.end {
  margin-left: var(--bds-sizes-size-8);
}

.c0 {
  position: relative;
  z-index: 1150;
}

.c0.inline-spinner {
  margin-left: var(--bds-sizes-size-8);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
}

.c0 .spinner-overlay {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .spinner-overlay .icon-wrapper {
  background-color: var(--bds-color-text-tertiary);
  border-radius: 100%;
  padding: var(--bds-sizes-size-32);
}

.c0 .spinner-overlay .icon-wrapper.size--small {
  padding: var(--bds-sizes-size-16);
}

.c0 .spinner-overlay svg {
  display: block;
}

.c0.inline-spinner svg,
.c0 .icon-wrapper svg {
  height: var(--bds-sizes-size-64);
  width: var(--bds-sizes-size-64);
  -webkit-animation: kKPVgJ 1s linear infinite;
  -moz-animation: kKPVgJ 1s linear infinite;
  -webkit-animation: kKPVgJ 1s linear infinite;
  animation: kKPVgJ 1s linear infinite;
}

.c0.inline-spinner.size--small svg,
.c0 .icon-wrapper.size--small svg {
  height: var(--bds-sizes-size-16);
  width: var(--bds-sizes-size-16);
}

<span
    class="c0 inline-spinner size--small"
  >
    <svg
      aria-hidden="true"
      class="c1 icon icon-loading"
      role="presentation"
      style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: interactive;"
      viewBox="0 0 16 16"
    >
      <path
        clip-rule="evenodd"
        d="M8 2c3.3137 0 6 2.6863 6 6s-2.6863 6-6 6a5.9877 5.9877 0 0 1-2.113-.3826l.849-1.2974c.401.1172.8251.18 1.264.18 2.4853 0 4.5-2.0147 4.5-4.5S10.4853 3.5 8 3.5 3.5 5.5147 3.5 8c0 .777.197 1.5082.5437 2.146l-1.1202 1.0538C2.3385 10.2737 2 9.1764 2 8c0-3.3137 2.6863-6 6-6Z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`Spinner Snapshots inline spinner themes Inline Spinner dark theme snapshot 1`] = `
<DocumentFragment>
  .c1 {
  width: var(--style-icon-width);
  height: var(--style-icon-height);
}

.c1:not(.color-override) g,
.c1:not(.color-override) path {
  fill: var(--style-icon-color);
}

.c1:not(.color-override) g[stroke-width],
.c1:not(.color-override) path[stroke-width] {
  stroke: var(--style-icon-color);
  fill: none;
}

.c1:not(.color-override) g[stroke-width] *,
.c1:not(.color-override) path[stroke-width] * {
  fill: none;
}

.c1.start {
  margin-right: var(--bds-sizes-size-8);
}

.c1.end {
  margin-left: var(--bds-sizes-size-8);
}

.c0 {
  position: relative;
  z-index: 1150;
}

.c0.inline-spinner {
  margin-left: var(--bds-sizes-size-8);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
}

.c0 .spinner-overlay {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .spinner-overlay .icon-wrapper {
  background-color: var(--bds-color-text-tertiary);
  border-radius: 100%;
  padding: var(--bds-sizes-size-32);
}

.c0 .spinner-overlay .icon-wrapper.size--small {
  padding: var(--bds-sizes-size-16);
}

.c0 .spinner-overlay svg {
  display: block;
}

.c0.inline-spinner svg,
.c0 .icon-wrapper svg {
  height: var(--bds-sizes-size-64);
  width: var(--bds-sizes-size-64);
  -webkit-animation: kKPVgJ 1s linear infinite;
  -moz-animation: kKPVgJ 1s linear infinite;
  -webkit-animation: kKPVgJ 1s linear infinite;
  animation: kKPVgJ 1s linear infinite;
}

.c0.inline-spinner.size--small svg,
.c0 .icon-wrapper.size--small svg {
  height: var(--bds-sizes-size-16);
  width: var(--bds-sizes-size-16);
}

<span
    class="c0 inline-spinner size--small"
  >
    <svg
      aria-hidden="true"
      class="c1 icon icon-loading"
      role="presentation"
      style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: interactive;"
      viewBox="0 0 16 16"
    >
      <path
        clip-rule="evenodd"
        d="M8 2c3.3137 0 6 2.6863 6 6s-2.6863 6-6 6a5.9877 5.9877 0 0 1-2.113-.3826l.849-1.2974c.401.1172.8251.18 1.264.18 2.4853 0 4.5-2.0147 4.5-4.5S10.4853 3.5 8 3.5 3.5 5.5147 3.5 8c0 .777.197 1.5082.5437 2.146l-1.1202 1.0538C2.3385 10.2737 2 9.1764 2 8c0-3.3137 2.6863-6 6-6Z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`Spinner Snapshots inline spinner themes Inline Spinner light theme snapshot 1`] = `
<DocumentFragment>
  .c1 {
  width: var(--style-icon-width);
  height: var(--style-icon-height);
}

.c1:not(.color-override) g,
.c1:not(.color-override) path {
  fill: var(--style-icon-color);
}

.c1:not(.color-override) g[stroke-width],
.c1:not(.color-override) path[stroke-width] {
  stroke: var(--style-icon-color);
  fill: none;
}

.c1:not(.color-override) g[stroke-width] *,
.c1:not(.color-override) path[stroke-width] * {
  fill: none;
}

.c1.start {
  margin-right: var(--bds-sizes-size-8);
}

.c1.end {
  margin-left: var(--bds-sizes-size-8);
}

.c0 {
  position: relative;
  z-index: 1150;
}

.c0.inline-spinner {
  margin-left: var(--bds-sizes-size-8);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
}

.c0 .spinner-overlay {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .spinner-overlay .icon-wrapper {
  background-color: var(--bds-color-text-tertiary);
  border-radius: 100%;
  padding: var(--bds-sizes-size-32);
}

.c0 .spinner-overlay .icon-wrapper.size--small {
  padding: var(--bds-sizes-size-16);
}

.c0 .spinner-overlay svg {
  display: block;
}

.c0.inline-spinner svg,
.c0 .icon-wrapper svg {
  height: var(--bds-sizes-size-64);
  width: var(--bds-sizes-size-64);
  -webkit-animation: kKPVgJ 1s linear infinite;
  -moz-animation: kKPVgJ 1s linear infinite;
  -webkit-animation: kKPVgJ 1s linear infinite;
  animation: kKPVgJ 1s linear infinite;
}

.c0.inline-spinner.size--small svg,
.c0 .icon-wrapper.size--small svg {
  height: var(--bds-sizes-size-16);
  width: var(--bds-sizes-size-16);
}

<span
    class="c0 inline-spinner size--small"
  >
    <svg
      aria-hidden="true"
      class="c1 icon icon-loading"
      role="presentation"
      style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: interactive;"
      viewBox="0 0 16 16"
    >
      <path
        clip-rule="evenodd"
        d="M8 2c3.3137 0 6 2.6863 6 6s-2.6863 6-6 6a5.9877 5.9877 0 0 1-2.113-.3826l.849-1.2974c.401.1172.8251.18 1.264.18 2.4853 0 4.5-2.0147 4.5-4.5S10.4853 3.5 8 3.5 3.5 5.5147 3.5 8c0 .777.197 1.5082.5437 2.146l-1.1202 1.0538C2.3385 10.2737 2 9.1764 2 8c0-3.3137 2.6863-6 6-6Z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`Spinner Snapshots overlay spinner Spinner default snapshot 1`] = `
<DocumentFragment>
  .c2 {
  width: var(--style-icon-width);
  height: var(--style-icon-height);
}

.c2:not(.color-override) g,
.c2:not(.color-override) path {
  fill: var(--style-icon-color);
}

.c2:not(.color-override) g[stroke-width],
.c2:not(.color-override) path[stroke-width] {
  stroke: var(--style-icon-color);
  fill: none;
}

.c2:not(.color-override) g[stroke-width] *,
.c2:not(.color-override) path[stroke-width] * {
  fill: none;
}

.c2.start {
  margin-right: var(--bds-sizes-size-8);
}

.c2.end {
  margin-left: var(--bds-sizes-size-8);
}

.c1 {
  z-index: var(--bds-zIndex-overlay);
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: var(--bds-color-overlay);
  -webkit-tap-highlight-color: transparent;
}

.c1.invisible {
  background-color: transparent;
}

.c0 {
  position: relative;
  z-index: 1150;
}

.c0.inline-spinner {
  margin-left: var(--bds-sizes-size-8);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
}

.c0 .spinner-overlay {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .spinner-overlay .icon-wrapper {
  background-color: var(--bds-color-text-tertiary);
  border-radius: 100%;
  padding: var(--bds-sizes-size-32);
}

.c0 .spinner-overlay .icon-wrapper.size--small {
  padding: var(--bds-sizes-size-16);
}

.c0 .spinner-overlay svg {
  display: block;
}

.c0.inline-spinner svg,
.c0 .icon-wrapper svg {
  height: var(--bds-sizes-size-64);
  width: var(--bds-sizes-size-64);
  -webkit-animation: kKPVgJ 1s linear infinite;
  -moz-animation: kKPVgJ 1s linear infinite;
  -webkit-animation: kKPVgJ 1s linear infinite;
  animation: kKPVgJ 1s linear infinite;
}

.c0.inline-spinner.size--small svg,
.c0 .icon-wrapper.size--small svg {
  height: var(--bds-sizes-size-16);
  width: var(--bds-sizes-size-16);
}

<span
    class="c0"
  >
    <div
      aria-hidden="true"
      class="c1 overlay spinner-overlay"
    >
      <div
        class="icon-wrapper"
      >
        <svg
          aria-hidden="true"
          class="c2 icon icon-loading"
          role="presentation"
          style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: hsl(0, 0%, 100%, 1);"
          viewBox="0 0 16 16"
        >
          <path
            clip-rule="evenodd"
            d="M8 2c3.3137 0 6 2.6863 6 6s-2.6863 6-6 6a5.9877 5.9877 0 0 1-2.113-.3826l.849-1.2974c.401.1172.8251.18 1.264.18 2.4853 0 4.5-2.0147 4.5-4.5S10.4853 3.5 8 3.5 3.5 5.5147 3.5 8c0 .777.197 1.5082.5437 2.146l-1.1202 1.0538C2.3385 10.2737 2 9.1764 2 8c0-3.3137 2.6863-6 6-6Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`Spinner Snapshots overlay spinner colors Spinner commerce theme snapshot 1`] = `
<DocumentFragment>
  .c2 {
  width: var(--style-icon-width);
  height: var(--style-icon-height);
}

.c2:not(.color-override) g,
.c2:not(.color-override) path {
  fill: var(--style-icon-color);
}

.c2:not(.color-override) g[stroke-width],
.c2:not(.color-override) path[stroke-width] {
  stroke: var(--style-icon-color);
  fill: none;
}

.c2:not(.color-override) g[stroke-width] *,
.c2:not(.color-override) path[stroke-width] * {
  fill: none;
}

.c2.start {
  margin-right: var(--bds-sizes-size-8);
}

.c2.end {
  margin-left: var(--bds-sizes-size-8);
}

.c1 {
  z-index: var(--bds-zIndex-overlay);
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: var(--bds-color-overlay);
  -webkit-tap-highlight-color: transparent;
}

.c1.invisible {
  background-color: transparent;
}

.c0 {
  position: relative;
  z-index: 1150;
}

.c0.inline-spinner {
  margin-left: var(--bds-sizes-size-8);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
}

.c0 .spinner-overlay {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .spinner-overlay .icon-wrapper {
  background-color: var(--bds-color-text-tertiary);
  border-radius: 100%;
  padding: var(--bds-sizes-size-32);
}

.c0 .spinner-overlay .icon-wrapper.size--small {
  padding: var(--bds-sizes-size-16);
}

.c0 .spinner-overlay svg {
  display: block;
}

.c0.inline-spinner svg,
.c0 .icon-wrapper svg {
  height: var(--bds-sizes-size-64);
  width: var(--bds-sizes-size-64);
  -webkit-animation: kKPVgJ 1s linear infinite;
  -moz-animation: kKPVgJ 1s linear infinite;
  -webkit-animation: kKPVgJ 1s linear infinite;
  animation: kKPVgJ 1s linear infinite;
}

.c0.inline-spinner.size--small svg,
.c0 .icon-wrapper.size--small svg {
  height: var(--bds-sizes-size-16);
  width: var(--bds-sizes-size-16);
}

<span
    class="c0"
  >
    <div
      aria-hidden="true"
      class="c1 overlay spinner-overlay"
    >
      <div
        class="icon-wrapper"
      >
        <svg
          aria-hidden="true"
          class="c2 icon icon-loading"
          role="presentation"
          style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: commerce;"
          viewBox="0 0 16 16"
        >
          <path
            clip-rule="evenodd"
            d="M8 2c3.3137 0 6 2.6863 6 6s-2.6863 6-6 6a5.9877 5.9877 0 0 1-2.113-.3826l.849-1.2974c.401.1172.8251.18 1.264.18 2.4853 0 4.5-2.0147 4.5-4.5S10.4853 3.5 8 3.5 3.5 5.5147 3.5 8c0 .777.197 1.5082.5437 2.146l-1.1202 1.0538C2.3385 10.2737 2 9.1764 2 8c0-3.3137 2.6863-6 6-6Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`Spinner Snapshots overlay spinner colors Spinner error theme snapshot 1`] = `
<DocumentFragment>
  .c2 {
  width: var(--style-icon-width);
  height: var(--style-icon-height);
}

.c2:not(.color-override) g,
.c2:not(.color-override) path {
  fill: var(--style-icon-color);
}

.c2:not(.color-override) g[stroke-width],
.c2:not(.color-override) path[stroke-width] {
  stroke: var(--style-icon-color);
  fill: none;
}

.c2:not(.color-override) g[stroke-width] *,
.c2:not(.color-override) path[stroke-width] * {
  fill: none;
}

.c2.start {
  margin-right: var(--bds-sizes-size-8);
}

.c2.end {
  margin-left: var(--bds-sizes-size-8);
}

.c1 {
  z-index: var(--bds-zIndex-overlay);
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: var(--bds-color-overlay);
  -webkit-tap-highlight-color: transparent;
}

.c1.invisible {
  background-color: transparent;
}

.c0 {
  position: relative;
  z-index: 1150;
}

.c0.inline-spinner {
  margin-left: var(--bds-sizes-size-8);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
}

.c0 .spinner-overlay {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .spinner-overlay .icon-wrapper {
  background-color: var(--bds-color-text-tertiary);
  border-radius: 100%;
  padding: var(--bds-sizes-size-32);
}

.c0 .spinner-overlay .icon-wrapper.size--small {
  padding: var(--bds-sizes-size-16);
}

.c0 .spinner-overlay svg {
  display: block;
}

.c0.inline-spinner svg,
.c0 .icon-wrapper svg {
  height: var(--bds-sizes-size-64);
  width: var(--bds-sizes-size-64);
  -webkit-animation: kKPVgJ 1s linear infinite;
  -moz-animation: kKPVgJ 1s linear infinite;
  -webkit-animation: kKPVgJ 1s linear infinite;
  animation: kKPVgJ 1s linear infinite;
}

.c0.inline-spinner.size--small svg,
.c0 .icon-wrapper.size--small svg {
  height: var(--bds-sizes-size-16);
  width: var(--bds-sizes-size-16);
}

<span
    class="c0"
  >
    <div
      aria-hidden="true"
      class="c1 overlay spinner-overlay"
    >
      <div
        class="icon-wrapper"
      >
        <svg
          aria-hidden="true"
          class="c2 icon icon-loading"
          role="presentation"
          style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: error;"
          viewBox="0 0 16 16"
        >
          <path
            clip-rule="evenodd"
            d="M8 2c3.3137 0 6 2.6863 6 6s-2.6863 6-6 6a5.9877 5.9877 0 0 1-2.113-.3826l.849-1.2974c.401.1172.8251.18 1.264.18 2.4853 0 4.5-2.0147 4.5-4.5S10.4853 3.5 8 3.5 3.5 5.5147 3.5 8c0 .777.197 1.5082.5437 2.146l-1.1202 1.0538C2.3385 10.2737 2 9.1764 2 8c0-3.3137 2.6863-6 6-6Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`Spinner Snapshots overlay spinner extra props Spinner DOM props (className) snapshot 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  z-index: 1150;
}

.c0.inline-spinner {
  margin-left: var(--bds-sizes-size-8);
  display: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
}

.c0 .spinner-overlay {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .spinner-overlay .icon-wrapper {
  background-color: var(--bds-color-text-tertiary);
  border-radius: 100%;
  padding: var(--bds-sizes-size-32);
}

.c0 .spinner-overlay .icon-wrapper.size--small {
  padding: var(--bds-sizes-size-16);
}

.c0 .spinner-overlay svg {
  display: block;
}

.c0.inline-spinner svg,
.c0 .icon-wrapper svg {
  height: var(--bds-sizes-size-64);
  width: var(--bds-sizes-size-64);
  -webkit-animation: kKPVgJ 1s linear infinite;
  -moz-animation: kKPVgJ 1s linear infinite;
  -webkit-animation: kKPVgJ 1s linear infinite;
  animation: kKPVgJ 1s linear infinite;
}

.c0.inline-spinner.size--small svg,
.c0 .icon-wrapper.size--small svg {
  height: var(--bds-sizes-size-16);
  width: var(--bds-sizes-size-16);
}

<span
    class="c0"
    open=""
  />
</DocumentFragment>
`;

exports[`Spinner Snapshots overlay spinner prop: invisible Spinner overlay invisible snapshot 1`] = `
<DocumentFragment>
  .c2 {
  width: var(--style-icon-width);
  height: var(--style-icon-height);
}

.c2:not(.color-override) g,
.c2:not(.color-override) path {
  fill: var(--style-icon-color);
}

.c2:not(.color-override) g[stroke-width],
.c2:not(.color-override) path[stroke-width] {
  stroke: var(--style-icon-color);
  fill: none;
}

.c2:not(.color-override) g[stroke-width] *,
.c2:not(.color-override) path[stroke-width] * {
  fill: none;
}

.c2.start {
  margin-right: var(--bds-sizes-size-8);
}

.c2.end {
  margin-left: var(--bds-sizes-size-8);
}

.c1 {
  z-index: var(--bds-zIndex-overlay);
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: var(--bds-color-overlay);
  -webkit-tap-highlight-color: transparent;
}

.c1.invisible {
  background-color: transparent;
}

.c0 {
  position: relative;
  z-index: 1150;
}

.c0.inline-spinner {
  margin-left: var(--bds-sizes-size-8);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
}

.c0 .spinner-overlay {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .spinner-overlay .icon-wrapper {
  background-color: var(--bds-color-text-tertiary);
  border-radius: 100%;
  padding: var(--bds-sizes-size-32);
}

.c0 .spinner-overlay .icon-wrapper.size--small {
  padding: var(--bds-sizes-size-16);
}

.c0 .spinner-overlay svg {
  display: block;
}

.c0.inline-spinner svg,
.c0 .icon-wrapper svg {
  height: var(--bds-sizes-size-64);
  width: var(--bds-sizes-size-64);
  -webkit-animation: kKPVgJ 1s linear infinite;
  -moz-animation: kKPVgJ 1s linear infinite;
  -webkit-animation: kKPVgJ 1s linear infinite;
  animation: kKPVgJ 1s linear infinite;
}

.c0.inline-spinner.size--small svg,
.c0 .icon-wrapper.size--small svg {
  height: var(--bds-sizes-size-16);
  width: var(--bds-sizes-size-16);
}

<span
    class="c0"
  >
    <div
      aria-hidden="true"
      class="c1 overlay spinner-overlay invisible"
    >
      <div
        class="icon-wrapper"
      >
        <svg
          aria-hidden="true"
          class="c2 icon icon-loading"
          role="presentation"
          style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: hsl(0, 0%, 100%, 1);"
          viewBox="0 0 16 16"
        >
          <path
            clip-rule="evenodd"
            d="M8 2c3.3137 0 6 2.6863 6 6s-2.6863 6-6 6a5.9877 5.9877 0 0 1-2.113-.3826l.849-1.2974c.401.1172.8251.18 1.264.18 2.4853 0 4.5-2.0147 4.5-4.5S10.4853 3.5 8 3.5 3.5 5.5147 3.5 8c0 .777.197 1.5082.5437 2.146l-1.1202 1.0538C2.3385 10.2737 2 9.1764 2 8c0-3.3137 2.6863-6 6-6Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`Spinner Snapshots overlay spinner prop: open Spinner not shown snapshot 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  z-index: 1150;
}

.c0.inline-spinner {
  margin-left: var(--bds-sizes-size-8);
  display: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
}

.c0 .spinner-overlay {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .spinner-overlay .icon-wrapper {
  background-color: var(--bds-color-text-tertiary);
  border-radius: 100%;
  padding: var(--bds-sizes-size-32);
}

.c0 .spinner-overlay .icon-wrapper.size--small {
  padding: var(--bds-sizes-size-16);
}

.c0 .spinner-overlay svg {
  display: block;
}

.c0.inline-spinner svg,
.c0 .icon-wrapper svg {
  height: var(--bds-sizes-size-64);
  width: var(--bds-sizes-size-64);
  -webkit-animation: kKPVgJ 1s linear infinite;
  -moz-animation: kKPVgJ 1s linear infinite;
  -webkit-animation: kKPVgJ 1s linear infinite;
  animation: kKPVgJ 1s linear infinite;
}

.c0.inline-spinner.size--small svg,
.c0 .icon-wrapper.size--small svg {
  height: var(--bds-sizes-size-16);
  width: var(--bds-sizes-size-16);
}

<span
    class="c0"
  />
</DocumentFragment>
`;

exports[`Spinner Snapshots overlay spinner prop: open Spinner shown snapshot 1`] = `
<DocumentFragment>
  .c2 {
  width: var(--style-icon-width);
  height: var(--style-icon-height);
}

.c2:not(.color-override) g,
.c2:not(.color-override) path {
  fill: var(--style-icon-color);
}

.c2:not(.color-override) g[stroke-width],
.c2:not(.color-override) path[stroke-width] {
  stroke: var(--style-icon-color);
  fill: none;
}

.c2:not(.color-override) g[stroke-width] *,
.c2:not(.color-override) path[stroke-width] * {
  fill: none;
}

.c2.start {
  margin-right: var(--bds-sizes-size-8);
}

.c2.end {
  margin-left: var(--bds-sizes-size-8);
}

.c1 {
  z-index: var(--bds-zIndex-overlay);
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: var(--bds-color-overlay);
  -webkit-tap-highlight-color: transparent;
}

.c1.invisible {
  background-color: transparent;
}

.c0 {
  position: relative;
  z-index: 1150;
}

.c0.inline-spinner {
  margin-left: var(--bds-sizes-size-8);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
}

.c0 .spinner-overlay {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .spinner-overlay .icon-wrapper {
  background-color: var(--bds-color-text-tertiary);
  border-radius: 100%;
  padding: var(--bds-sizes-size-32);
}

.c0 .spinner-overlay .icon-wrapper.size--small {
  padding: var(--bds-sizes-size-16);
}

.c0 .spinner-overlay svg {
  display: block;
}

.c0.inline-spinner svg,
.c0 .icon-wrapper svg {
  height: var(--bds-sizes-size-64);
  width: var(--bds-sizes-size-64);
  -webkit-animation: kKPVgJ 1s linear infinite;
  -moz-animation: kKPVgJ 1s linear infinite;
  -webkit-animation: kKPVgJ 1s linear infinite;
  animation: kKPVgJ 1s linear infinite;
}

.c0.inline-spinner.size--small svg,
.c0 .icon-wrapper.size--small svg {
  height: var(--bds-sizes-size-16);
  width: var(--bds-sizes-size-16);
}

<span
    class="c0"
  >
    <div
      aria-hidden="true"
      class="c1 overlay spinner-overlay"
    >
      <div
        class="icon-wrapper"
      >
        <svg
          aria-hidden="true"
          class="c2 icon icon-loading"
          role="presentation"
          style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: hsl(0, 0%, 100%, 1);"
          viewBox="0 0 16 16"
        >
          <path
            clip-rule="evenodd"
            d="M8 2c3.3137 0 6 2.6863 6 6s-2.6863 6-6 6a5.9877 5.9877 0 0 1-2.113-.3826l.849-1.2974c.401.1172.8251.18 1.264.18 2.4853 0 4.5-2.0147 4.5-4.5S10.4853 3.5 8 3.5 3.5 5.5147 3.5 8c0 .777.197 1.5082.5437 2.146l-1.1202 1.0538C2.3385 10.2737 2 9.1764 2 8c0-3.3137 2.6863-6 6-6Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`Spinner Snapshots overlay spinner prop: small Spinner overlay invisible snapshot 1`] = `
<DocumentFragment>
  .c2 {
  width: var(--style-icon-width);
  height: var(--style-icon-height);
}

.c2:not(.color-override) g,
.c2:not(.color-override) path {
  fill: var(--style-icon-color);
}

.c2:not(.color-override) g[stroke-width],
.c2:not(.color-override) path[stroke-width] {
  stroke: var(--style-icon-color);
  fill: none;
}

.c2:not(.color-override) g[stroke-width] *,
.c2:not(.color-override) path[stroke-width] * {
  fill: none;
}

.c2.start {
  margin-right: var(--bds-sizes-size-8);
}

.c2.end {
  margin-left: var(--bds-sizes-size-8);
}

.c1 {
  z-index: var(--bds-zIndex-overlay);
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: var(--bds-color-overlay);
  -webkit-tap-highlight-color: transparent;
}

.c1.invisible {
  background-color: transparent;
}

.c0 {
  position: relative;
  z-index: 1150;
}

.c0.inline-spinner {
  margin-left: var(--bds-sizes-size-8);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
}

.c0 .spinner-overlay {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .spinner-overlay .icon-wrapper {
  background-color: var(--bds-color-text-tertiary);
  border-radius: 100%;
  padding: var(--bds-sizes-size-32);
}

.c0 .spinner-overlay .icon-wrapper.size--small {
  padding: var(--bds-sizes-size-16);
}

.c0 .spinner-overlay svg {
  display: block;
}

.c0.inline-spinner svg,
.c0 .icon-wrapper svg {
  height: var(--bds-sizes-size-64);
  width: var(--bds-sizes-size-64);
  -webkit-animation: kKPVgJ 1s linear infinite;
  -moz-animation: kKPVgJ 1s linear infinite;
  -webkit-animation: kKPVgJ 1s linear infinite;
  animation: kKPVgJ 1s linear infinite;
}

.c0.inline-spinner.size--small svg,
.c0 .icon-wrapper.size--small svg {
  height: var(--bds-sizes-size-16);
  width: var(--bds-sizes-size-16);
}

<span
    class="c0 size--small"
  >
    <div
      aria-hidden="true"
      class="c1 overlay spinner-overlay"
    >
      <div
        class="icon-wrapper size--small"
      >
        <svg
          aria-hidden="true"
          class="c2 icon icon-loading"
          role="presentation"
          style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: hsl(0, 0%, 100%, 1);"
          viewBox="0 0 16 16"
        >
          <path
            clip-rule="evenodd"
            d="M8 2c3.3137 0 6 2.6863 6 6s-2.6863 6-6 6a5.9877 5.9877 0 0 1-2.113-.3826l.849-1.2974c.401.1172.8251.18 1.264.18 2.4853 0 4.5-2.0147 4.5-4.5S10.4853 3.5 8 3.5 3.5 5.5147 3.5 8c0 .777.197 1.5082.5437 2.146l-1.1202 1.0538C2.3385 10.2737 2 9.1764 2 8c0-3.3137 2.6863-6 6-6Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`Spinner Snapshots overlay spinner themes Spinner dark theme snapshot 1`] = `
<DocumentFragment>
  .c2 {
  width: var(--style-icon-width);
  height: var(--style-icon-height);
}

.c2:not(.color-override) g,
.c2:not(.color-override) path {
  fill: var(--style-icon-color);
}

.c2:not(.color-override) g[stroke-width],
.c2:not(.color-override) path[stroke-width] {
  stroke: var(--style-icon-color);
  fill: none;
}

.c2:not(.color-override) g[stroke-width] *,
.c2:not(.color-override) path[stroke-width] * {
  fill: none;
}

.c2.start {
  margin-right: var(--bds-sizes-size-8);
}

.c2.end {
  margin-left: var(--bds-sizes-size-8);
}

.c1 {
  z-index: var(--bds-zIndex-overlay);
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: var(--bds-color-overlay);
  -webkit-tap-highlight-color: transparent;
}

.c1.invisible {
  background-color: transparent;
}

.c0 {
  position: relative;
  z-index: 1150;
}

.c0.inline-spinner {
  margin-left: var(--bds-sizes-size-8);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
}

.c0 .spinner-overlay {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .spinner-overlay .icon-wrapper {
  background-color: var(--bds-color-text-tertiary);
  border-radius: 100%;
  padding: var(--bds-sizes-size-32);
}

.c0 .spinner-overlay .icon-wrapper.size--small {
  padding: var(--bds-sizes-size-16);
}

.c0 .spinner-overlay svg {
  display: block;
}

.c0.inline-spinner svg,
.c0 .icon-wrapper svg {
  height: var(--bds-sizes-size-64);
  width: var(--bds-sizes-size-64);
  -webkit-animation: kKPVgJ 1s linear infinite;
  -moz-animation: kKPVgJ 1s linear infinite;
  -webkit-animation: kKPVgJ 1s linear infinite;
  animation: kKPVgJ 1s linear infinite;
}

.c0.inline-spinner.size--small svg,
.c0 .icon-wrapper.size--small svg {
  height: var(--bds-sizes-size-16);
  width: var(--bds-sizes-size-16);
}

<span
    class="c0"
  >
    <div
      aria-hidden="true"
      class="c1 overlay spinner-overlay"
    >
      <div
        class="icon-wrapper"
      >
        <svg
          aria-hidden="true"
          class="c2 icon icon-loading"
          role="presentation"
          style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: hsl(0, 0%, 100%, 1);"
          viewBox="0 0 16 16"
        >
          <path
            clip-rule="evenodd"
            d="M8 2c3.3137 0 6 2.6863 6 6s-2.6863 6-6 6a5.9877 5.9877 0 0 1-2.113-.3826l.849-1.2974c.401.1172.8251.18 1.264.18 2.4853 0 4.5-2.0147 4.5-4.5S10.4853 3.5 8 3.5 3.5 5.5147 3.5 8c0 .777.197 1.5082.5437 2.146l-1.1202 1.0538C2.3385 10.2737 2 9.1764 2 8c0-3.3137 2.6863-6 6-6Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`Spinner Snapshots overlay spinner themes Spinner light theme snapshot 1`] = `
<DocumentFragment>
  .c2 {
  width: var(--style-icon-width);
  height: var(--style-icon-height);
}

.c2:not(.color-override) g,
.c2:not(.color-override) path {
  fill: var(--style-icon-color);
}

.c2:not(.color-override) g[stroke-width],
.c2:not(.color-override) path[stroke-width] {
  stroke: var(--style-icon-color);
  fill: none;
}

.c2:not(.color-override) g[stroke-width] *,
.c2:not(.color-override) path[stroke-width] * {
  fill: none;
}

.c2.start {
  margin-right: var(--bds-sizes-size-8);
}

.c2.end {
  margin-left: var(--bds-sizes-size-8);
}

.c1 {
  z-index: var(--bds-zIndex-overlay);
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: var(--bds-color-overlay);
  -webkit-tap-highlight-color: transparent;
}

.c1.invisible {
  background-color: transparent;
}

.c0 {
  position: relative;
  z-index: 1150;
}

.c0.inline-spinner {
  margin-left: var(--bds-sizes-size-8);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
}

.c0 .spinner-overlay {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .spinner-overlay .icon-wrapper {
  background-color: var(--bds-color-text-tertiary);
  border-radius: 100%;
  padding: var(--bds-sizes-size-32);
}

.c0 .spinner-overlay .icon-wrapper.size--small {
  padding: var(--bds-sizes-size-16);
}

.c0 .spinner-overlay svg {
  display: block;
}

.c0.inline-spinner svg,
.c0 .icon-wrapper svg {
  height: var(--bds-sizes-size-64);
  width: var(--bds-sizes-size-64);
  -webkit-animation: kKPVgJ 1s linear infinite;
  -moz-animation: kKPVgJ 1s linear infinite;
  -webkit-animation: kKPVgJ 1s linear infinite;
  animation: kKPVgJ 1s linear infinite;
}

.c0.inline-spinner.size--small svg,
.c0 .icon-wrapper.size--small svg {
  height: var(--bds-sizes-size-16);
  width: var(--bds-sizes-size-16);
}

<span
    class="c0"
  >
    <div
      aria-hidden="true"
      class="c1 overlay spinner-overlay"
    >
      <div
        class="icon-wrapper"
      >
        <svg
          aria-hidden="true"
          class="c2 icon icon-loading"
          role="presentation"
          style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: hsl(0, 0%, 100%, 1);"
          viewBox="0 0 16 16"
        >
          <path
            clip-rule="evenodd"
            d="M8 2c3.3137 0 6 2.6863 6 6s-2.6863 6-6 6a5.9877 5.9877 0 0 1-2.113-.3826l.849-1.2974c.401.1172.8251.18 1.264.18 2.4853 0 4.5-2.0147 4.5-4.5S10.4853 3.5 8 3.5 3.5 5.5147 3.5 8c0 .777.197 1.5082.5437 2.146l-1.1202 1.0538C2.3385 10.2737 2 9.1764 2 8c0-3.3137 2.6863-6 6-6Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </span>
</DocumentFragment>
`;
